# quickdict

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  cargo-sources.json  flatpak_buid_instruction.txt  io.github.tigertall.QuickDict.json  meson.build
.github/workflows/: flathub-update.yml  flatpak-release.yml
data/: io.github.tigertall.QuickDict.desktop  io.github.tigertall.QuickDict.desktop.in  io.github.tigertall.QuickDict.metainfo.xml.in
ext/: meson.build
ext/quickdict-focus@tigertall.github.com/: extension.js  metadata.json  prefs.js  stylesheet.css
ext/quickdict-focus@tigertall.github.com/schemas/: org.gnome.shell.extensions.quickdict-focus.gschema.xml
po/: LINGUAS  POTFILES  gnome-dictionary.pot  meson.build
schemas/: io.github.tigertall.QuickDict.gschema.xml
src/: application.rs  config.rs  main.rs  preferences.rs  window.rs
src/capture/: dbus_service.rs  mod.rs
src/engine/: baidu_client.rs  dict_data.rs  dict_manager.rs  dict_reader.rs  dictzip.rs  fuzzy_matcher.rs  idx_parser.rs  ifo_parser.rs  mdx_reader.rs  mod.rs  search_engine.rs  syn_parser.rs  types.rs
src/views/: article_renderer.rs  content_view.rs  mod.rs  search_bar.rs  sidebar.rs  word_list.rs
tests/: analyze_mdx.rs
tools/mdx-analyzer/: Cargo.toml
tools/mdx-analyzer/src/: main.rs
